clang/test/BSC/Negative/Others/control_flow_graph/try_catch_1/try_catch_1.cbs
// RUN: %clang_cc1 -verify %s

#include "../catch.hbs"

int f1(int *num) {
  *num = 1;
  return 0;
}

void f2() {
}

int test1() {
  int temp = 0;
  int *_Borrow p = &mut temp; // expected-note {{`temp` is borrowed here}}

  int num = 0;

  TRY {
    f2();

    temp = -1; // expected-error {{cannot assign to `temp` because it is borrowed}}

    EXEC(f1(&num));

    if (num > 0) {
      temp = 1;
      f2();
    }

    temp = 42;
    num = 2;

    return 0;
  } CATCH {
    f2();
    *p = 1;
    return ERR_MSG;
  }
}

int test2() {
  int temp = 0;
  int *_Borrow p = &mut temp; // expected-note {{`temp` is borrowed here}}

  int num = 0;

  TRY {
    f1(&num);
    THROW_IF(f1(&num) <= 42, 1);
    temp = 1; // expected-error {{cannot assign to `temp` because it is borrowed}}
    THROW_IF(f1(&num) > 50, 2);
    temp = 2;

    return -1;
  } CATCH {
    f2();
    *p = 1;
    return ERR_MSG;
  }
}